--- a/echo-control/docs/money/claiming-profits.mdx
+++ b/echo-control/docs/money/claiming-profits.mdx
@@ -10,7 +10,7 @@ Both Echo Apps and Users have strategies to monetize on Echo.
 Apps earn a mark-up on each transaction, which is set by the app owner. This represents a percent upcharge on each token that passes through the application.
 
 The mark-up earned can be claimed only when a Github user or repository has been associated with the app. This can be done in the app's settings page.
-Once this is done, users can find their pending claims available on the [markup earnings page](https://echo.merit.systems/owner/earnings/markup).
+Once this is done, users can find their pending claims available on the [creator earnings page](https://echo.merit.systems/earnings/creator).
 
 ## Claims
 
