--- a/echo-control/docs/getting-started/templates.mdx
+++ b/echo-control/docs/getting-started/templates.mdx
@@ -46,6 +46,8 @@ a server to make API calls because it handles Oauth directly in the browser.
         </Tabs>
     </Step>
 
+    <Step
+
 
 </Steps>
 
@@ -85,5 +87,66 @@ The Next.js template is a full-stack application that uses the Next.js framework
                 ```
             </Tab>
         </Tabs>
+    </Step>
+</Steps>
+
+## Assistant UI
+
+A full-featured chat UI powered by `@assistant-ui/react` integrated with Echo and the Vercel AI SDK v5.
+
+<Steps>
+    <Step>
+        ### Create an Echo App
+        Go to [echo.merit.systems/new](https://echo.merit.systems/new) to get an `app_id`.
+    </Step>
+
+    <Step>
+        ### Scaffold the Assistant UI template
+        Use `degit` to copy the example into a new directory.
+        <Tabs items={['npm', 'yarn', 'pnpm', 'bun']}>
+            <Tab value="npm">
+                ```sh lineNumbers
+                npx degit Merit-Systems/echo/examples/assistant-ui my-assistant-ui
+                cd my-assistant-ui
+                npm install
+                ```
+            </Tab>
+            <Tab value="yarn">
+                ```sh lineNumbers
+                yarn dlx degit Merit-Systems/echo/examples/assistant-ui my-assistant-ui
+                cd my-assistant-ui
+                yarn install
+                ```
+            </Tab>
+            <Tab value="pnpm">
+                ```sh lineNumbers
+                pnpx degit Merit-Systems/echo/examples/assistant-ui my-assistant-ui
+                cd my-assistant-ui
+                pnpm install
+                ```
+            </Tab>
+            <Tab value="bun">
+                ```sh lineNumbers
+                bunx degit Merit-Systems/echo/examples/assistant-ui my-assistant-ui
+                cd my-assistant-ui
+                bun install
+                ```
+            </Tab>
+        </Tabs>
+    </Step>
+
+    <Step>
+        ### Configure environment
+        Create a `.env.local` file and set your Echo App ID:
+        ```env lineNumbers
+        NEXT_PUBLIC_ECHO_APP_ID=YOUR_ECHO_APP_ID
+        ```
+    </Step>
+
+    <Step>
+        ### Run the app
+        ```sh lineNumbers
+        pnpm dev
+        ```
     </Step>
 </Steps>
