--- a/echo-control/docs/getting-started/templates.mdx
+++ b/echo-control/docs/getting-started/templates.mdx
@@ -134,7 +134,7 @@ A full-featured chat UI powered by `@assistant-ui/react` integrated with Echo an
     <Step>
         ### Configure environment
         Create a `.env.local` file and set your Echo App ID:
-        ```env lineNumbers
+        ```sh lineNumbers
         NEXT_PUBLIC_ECHO_APP_ID=YOUR_ECHO_APP_ID
         ```
     </Step>
