--- a/packages/app/control/docs/next-sdk/server.mdx
+++ b/packages/app/control/docs/next-sdk/server.mdx
@@ -1,5 +1,5 @@
 ---
-title: Server 
+title: Server
 description: Echo's Next.js SDK server-side functionality.
 ---
 
@@ -8,30 +8,33 @@ Echo's Next.js SDK will handle all authentication logic out of the box.
 Configure Echo with the Echo constructor.
 
 ```typescript title="src/echo/index.ts"
-import Echo from "@merit-systems/echo-next-sdk";
+import Echo from '@merit-systems/echo-next-sdk';
 
-export const { 
-    // Echo Auth Routes
-    handlers, 
+export const {
+  // Echo Auth Routes
+  handlers,
 
-    // Server-side utils
-    getUser, isSignedIn, 
+  // Server-side utils
+  getUser,
+  isSignedIn,
 
-    // AI Providers
-    openai, anthropic, google 
+  // AI Providers
+  openai,
+  anthropic,
+  google,
 } = Echo({
-  appId: "ECHO_APP_ID",
+  appId: 'ECHO_APP_ID',
 });
 ```
 
 By re-exporting the Echo constructor results, you can use throughout your server logic.
 
-
 The `Echo` constructor takes the following configuration params.
-<AutoTypeTable path="../echo-next-sdk/src/types.ts" name="EchoConfig" />
 
+<AutoTypeTable path="../../sdk/next/src/types.ts" name="EchoConfig" />
 
 ## Handlers
+
 ```typescript
 import handlers from '@/echo';
 
@@ -39,17 +42,16 @@ export { GET, POST } = handlers;
 ```
 
 Exporting these routes will expose default authentication routes which can be used from the client. In most cases your code will not need to touch these routes.
+
 - `api/echo/signin`
 - `api/echo/callback`
 - `api/echo/refresh`
 
-
 **Very important** - When productionizing your application, you will need to append `/api/echo/callback` to your app's homepage route when inputting the correct authorized
 callback Url.
 
-
-
 ## Server Utilities
+
 ```typescript
 import { getUser, isSignedIn } from "@/echo";
 
@@ -67,6 +69,7 @@ export default async function Page() {
 ```
 
 ## AI Providers
+
 Echo's Next.js SDK provides a thin wrapper around the Vercel AI SDK.
 Echo follows their [recommended pattern](https://ai-sdk.dev/docs/getting-started/nextjs-app-router#create-a-route-handler) with a small diff, to route through Echo
 instead of the model provider.
@@ -75,7 +78,7 @@ instead of the model provider.
 // [!code --:1]
 import { openai } from '@ai-sdk/openai';
 // [!code ++:1]
-import { openai } from "@/echo";
+import { openai } from '@/echo';
 import { streamText, UIMessage, convertToModelMessages } from 'ai';
 
 // Allow streaming responses up to 30 seconds
