--- a/packages/app/control/docs/typescript-sdk/resources.mdx
+++ b/packages/app/control/docs/typescript-sdk/resources.mdx
@@ -31,10 +31,7 @@ import type { EchoApp } from '@merit-systems/echo-typescript-sdk';
 
 #### EchoApp
 
-<AutoTypeTable 
-  path="../echo-typescript-sdk/src/types.ts" 
-  name="EchoApp" 
-/>
+<AutoTypeTable path="../../sdk/ts/src/types.ts" name="EchoApp" />
 
 ## Balance Resource
 
@@ -53,29 +50,24 @@ const freeBalance = await echo.balance.getFreeBalance('app-id');
 ### Types
 
 ```typescript
-import type { Balance, FreeBalance, UserSpendInfo } from '@merit-systems/echo-typescript-sdk';
+import type {
+  Balance,
+  FreeBalance,
+  UserSpendInfo,
+} from '@merit-systems/echo-typescript-sdk';
 ```
 
 #### Balance
 
-<AutoTypeTable 
-  path="../echo-typescript-sdk/src/types.ts" 
-  name="Balance" 
-/>
+<AutoTypeTable path="../../sdk/ts/src/types.ts" name="Balance" />
 
 #### FreeBalance
 
-<AutoTypeTable 
-  path="../echo-typescript-sdk/src/types.ts" 
-  name="FreeBalance" 
-/>
+<AutoTypeTable path="../../sdk/ts/src/types.ts" name="FreeBalance" />
 
 #### UserSpendInfo
 
-<AutoTypeTable 
-  path="../echo-typescript-sdk/src/types.ts" 
-  name="UserSpendInfo" 
-/>
+<AutoTypeTable path="../../sdk/ts/src/types.ts" name="UserSpendInfo" />
 
 ## Payments Resource
 
@@ -84,7 +76,7 @@ Handle payment links and credit purchases through Stripe integration.
 ```typescript
 const paymentLink = await echo.payments.createPaymentLink({
   amount: 25,
-  description: 'Echo Credits'
+  description: 'Echo Credits',
 });
 
 const paymentUrl = await echo.payments.getPaymentUrl(10, 'Quick Top-up');
@@ -98,24 +90,24 @@ const paymentUrl = await echo.payments.getPaymentUrl(10, 'Quick Top-up');
 ### Types
 
 ```typescript
-import type { 
-  CreatePaymentLinkRequest, 
-  CreatePaymentLinkResponse 
+import type {
+  CreatePaymentLinkRequest,
+  CreatePaymentLinkResponse,
 } from '@merit-systems/echo-typescript-sdk';
 ```
 
 #### CreatePaymentLinkRequest
 
-<AutoTypeTable 
-  path="../echo-typescript-sdk/src/types.ts" 
-  name="CreatePaymentLinkRequest" 
+<AutoTypeTable
+  path="../../sdk/ts/src/types.ts"
+  name="CreatePaymentLinkRequest"
 />
 
 #### CreatePaymentLinkResponse
 
-<AutoTypeTable 
-  path="../echo-typescript-sdk/src/types.ts" 
-  name="CreatePaymentLinkResponse" 
+<AutoTypeTable
+  path="../../sdk/ts/src/types.ts"
+  name="CreatePaymentLinkResponse"
 />
 
 ## Models Resource
@@ -135,26 +127,25 @@ const imageModels = await echo.models.listSupportedImageModels();
 ### Types
 
 ```typescript
-import type { 
-  SupportedModel, 
-  SupportedImageModel 
+import type {
+  SupportedModel,
+  SupportedImageModel,
 } from '@merit-systems/echo-typescript-sdk';
 ```
 
 #### SupportedModel
 
-<AutoTypeTable 
-  path="../echo-typescript-sdk/src/supported-models/types.ts" 
-  name="SupportedModel" 
+<AutoTypeTable
+  path="../../sdk/ts/src/supported-models/types.ts"
+  name="SupportedModel"
 />
 
 #### SupportedImageModel
 
-<AutoTypeTable 
-  path="../echo-typescript-sdk/src/supported-models/types.ts" 
-  name="SupportedImageModel" 
+<AutoTypeTable
+  path="../../sdk/ts/src/supported-models/types.ts"
+  name="SupportedImageModel"
 />
-
 
 ## Users Resource
 
@@ -162,7 +153,10 @@ Manage user information and referral code registration.
 
 ```typescript
 const user = await echo.users.getUserInfo();
-const referralResult = await echo.users.registerReferralCode('app-id', 'REFERRAL123');
+const referralResult = await echo.users.registerReferralCode(
+  'app-id',
+  'REFERRAL123'
+);
 ```
 
 ### Methods
@@ -173,32 +167,29 @@ const referralResult = await echo.users.registerReferralCode('app-id', 'REFERRAL
 ### Types
 
 ```typescript
-import type { 
-  User, 
-  RegisterReferralCodeRequest, 
-  RegisterReferralCodeResponse 
+import type {
+  User,
+  RegisterReferralCodeRequest,
+  RegisterReferralCodeResponse,
 } from '@merit-systems/echo-typescript-sdk';
 ```
 
 #### User
 
-<AutoTypeTable 
-  path="../echo-typescript-sdk/src/types.ts" 
-  name="User" 
-/>
+<AutoTypeTable path="../../sdk/ts/src/types.ts" name="User" />
 
 #### RegisterReferralCodeRequest
 
-<AutoTypeTable 
-  path="../echo-typescript-sdk/src/types.ts" 
-  name="RegisterReferralCodeRequest" 
+<AutoTypeTable
+  path="../../sdk/ts/src/types.ts"
+  name="RegisterReferralCodeRequest"
 />
 
 #### RegisterReferralCodeResponse
 
-<AutoTypeTable 
-  path="../echo-typescript-sdk/src/types.ts" 
-  name="RegisterReferralCodeResponse" 
+<AutoTypeTable
+  path="../../sdk/ts/src/types.ts"
+  name="RegisterReferralCodeResponse"
 />
 
 ## Example Usage
@@ -214,25 +205,25 @@ async function platformDemo() {
   // Check user and balance
   const user = await echo.users.getUserInfo();
   const balance = await echo.balance.getBalance();
-  
+
   console.log(`User: ${user.email}, Balance: $${balance.balance}`);
-  
+
   // Create payment link if balance is low
   if (balance.balance < 5) {
     const payment = await echo.payments.createPaymentLink({
       amount: 20,
-      description: 'Account Top-up'
+      description: 'Account Top-up',
     });
-    
+
     console.log(`Payment link: ${payment.url}`);
   }
-  
+
   // List available models
   const chatModels = await echo.models.listSupportedChatModels();
   const imageModels = await echo.models.listSupportedImageModels();
   console.log(`Available chat models: ${chatModels.length}`);
   console.log(`Available image models: ${imageModels.length}`);
-  
+
   // Get app information
   const apps = await echo.apps.listEchoApps();
   console.log(`Your apps: ${apps.length}`);
