--- a/echo-control/docs/getting-started/templates.mdx
+++ b/echo-control/docs/getting-started/templates.mdx
@@ -25,22 +25,22 @@ a server to make API calls because it handles Oauth directly in the browser.
         <Tabs items={['npm', 'yarn', 'pnpm', 'bun']}>
             <Tab value="npm">
                 ```sh lineNumbers
-                npx echo-start@latest --template react --app-id YOUR_ECHO_APP_ID
+                npx echo-start@latest --template vite --app-id YOUR_ECHO_APP_ID
                 ```
             </Tab>
             <Tab value="yarn">
                 ```sh lineNumbers
-                yarn dlx echo-start@latest --template react --app-id YOUR_ECHO_APP_ID
+                yarn dlx echo-start@latest --template vite --app-id YOUR_ECHO_APP_ID
                 ```
             </Tab>
             <Tab value="pnpm">
                 ```sh lineNumbers
-                pnpx echo-start@latest --template react --app-id YOUR_ECHO_APP_ID
+                pnpx echo-start@latest --template vite --app-id YOUR_ECHO_APP_ID
                 ```
             </Tab>
             <Tab value="bun">
                 ```sh lineNumbers
-                bunx echo-start@latest --template react --app-id YOUR_ECHO_APP_ID
+                bunx echo-start@latest --template vite --app-id YOUR_ECHO_APP_ID
                 ```
             </Tab>
         </Tabs>
