--- a/packages/app/control/docs/advanced/api-reference.mdx
+++ b/packages/app/control/docs/advanced/api-reference.mdx
@@ -83,8 +83,8 @@ Get detailed app information for programmatic access.
 **Response Type:**
 
 <AutoTypeTable
-  path="src/services/apps/get.ts"
-  type={`NonNullable<Awaited<ReturnType<typeof getApp>>>`}
+  path="src/services/user/balance.ts"
+  type={`Awaited<ReturnType<typeof getUserGlobalBalance>>`}
 />
 
 ## Balance & Billing
@@ -105,10 +105,6 @@ Get authenticated user's credit balance.
 **Response Type:**
 
 <AutoTypeTable path="src/lib/balance/types.ts" name="Balance" />
-
-For app-specific balance queries, returns:
-
-<AutoTypeTable path="src/lib/balance/types.ts" name="AppBalance" />
 
 ### Get Free Tier Balance
 
