docs w the new component

--- a/packages/app/control/docs/react-sdk/use-chat.mdx
+++ b/packages/app/control/docs/react-sdk/use-chat.mdx
@@ -108,5 +108,5 @@ export function ChatInterface() {
 
 <AutoTypeTable
   path="../../sdk/react/src/components/EchoChatProvider.tsx"
-  name="EchoChatBuildContext"
+  name="ChatSendParams"
 />
