--- a/packages/app/control/docs/components/customization.mdx
+++ b/packages/app/control/docs/components/customization.mdx
@@ -103,6 +103,7 @@ Create your own color schemes:
 ```tsx
 import { Button, buttonVariants } from '@/components/echo-button';
 import { cn } from '@/lib/utils';
+import { cva } from 'class-variance-authority';
 
 // Custom variant
 const customButtonVariants = cva(
