--- a/packages/app/control/docs/components/echo-account.mdx
+++ b/packages/app/control/docs/components/echo-account.mdx
@@ -73,6 +73,7 @@ The main button that triggers the account popover:
 
 ```tsx
 import { EchoAccountButton } from '@/components/echo-account-button/echo-account';
+import { useEcho } from '@merit-systems/echo-react-sdk';
 
 // Usage with Echo context
 const echo = useEcho();
